--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>下载贪吃蛇游戏</title>
+    <title>下载玉米蛇游戏</title>
 </head>
 <body style="text-align: center; font-family: Arial;">
-    <h1>贪吃蛇游戏下载</h1>
+    <h1>玉米蛇游戏下载</h1>
     <p>点击下面的链接下载游戏：</p>
-    <a href="贪吃蛇.zip" download style="font-size: 20px; color: blue;">下载贪吃蛇游戏</a>
+    <a href="玉米蛇.zip" download style="font-size: 20px; color: blue;">下载玉米蛇游戏</a>
 </body>
 </html>
